# DCC059-2022.3

./: CMakeLists.txt  main.cpp  saida.txt  teste  testegrafo.dot  testegrafoADJ.txt
lib/include/: Edge.h  Graph.h  GraphOperations.h  Node.h  Sort.h
lib/input/: GAD_1.txt  GAD_1_ponderado.txt  GAD_2.txt  Problem.dat_100_250_3  Problem.dat_300_500_3  Problem.dat_500_500_0  Problem.dat_50_50_3  grafo_nao_ponderado_personalizado_10_1.txt  grafo_nao_ponderado_personalizado_10_2.txt  grafo_nao_ponderado_personalizado_25.txt  grafo_nao_ponderado_personalizado_5_1.txt  grafo_nao_ponderado_personalizado_5_2.txt  grafo_ponderado_6.txt  grafo_ponderado_personalizado_10_1.txt  grafo_ponderado_personalizado_10_2.txt  grafo_ponderado_personalizado_10_3.txt  grafo_ponderado_personalizado_25.txt  nome_arquivos.txt  redePertTest.txt  redePertTest2.txt
lib/input/Instancias Subconjunto Dominante Ponderado/: Problem.dat_100_500_3  Problem.dat_150_150_3  Problem.dat_250_750_3  Problem.dat_300_2000_3  Problem.dat_500_500_3  Problem.dat_50_250_3  nome_arquivos.txt  personalizado.txt
lib/output/: 123Rogergueds.txt  GRAFO-1.txt  GRAFO-2.txt  ad.txt  difference.dot  difference.txt  g1.dot  g2.dot  gTESTE.dot  gv.dot  intersection.dot  intersection.txt  lista de adjacencia.txt  union.dot  union.txt
lib/src/: Edge.cpp  Graph.cpp  GraphOperations.cpp  Node.cpp  Sort.cpp
